--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,8 @@ h1,h2,h3,h4,h5,h6 {font-size: normal;}
 
 .cf { content:''; display:block; clear:both; }
 
+legend { display: none;}
+
 /*Header 영역---------------------  */
 .header-outer {
   position:fixed; top:0px;
@@ -146,17 +148,42 @@ h1,h2,h3,h4,h5,h6 {font-size: normal;}
 #section1 #slide2 .intro .skill-box ul li .overlay p {
   text-align: center; line-height: 150px; font-size: 20px; color: #333; font-weight: bold;
 }
-#section2 .intro { position: relative; height: 90%;/* border:1px solid #f00; */}
-
+#section2 .intro { position: relative; height: 70%;/* border:1px solid #f00; */}
 #section2 .intro h3{
-  height: 100px; line-height: 100px; margin:100px auto 50px ;
   text-align: center; font-size: 32px; font-weight: bold; 
-  border: 1px solid #f00;
+  margin-bottom: 50px;
 }
-
 #section2 .intro .pofol-list ul li  {
   width: 24.8%; height: 300px; float: left;
   border: 1px solid #0f0;
+}
+#section3 .intro {height: 90%;}
+
+#section3 .intro .title1 {
+  height:50px; line-height: 50px ;margin:100px auto 0px ;
+  text-align: center; font-size: 32px; font-weight: bold; 
+}
+#section3 .intro .title2 {
+  height: 50px; line-height: 50px ;margin: 0 auto 50px ;
+  text-align: center; font-size: 32px; font-weight: bold; 
+}
+#section3 .intro .wrap-form .contact-form {
+  width: 50%; padding: 20px;
+  background:#f2f2f2; border-radius: 10px;
+  text-align: center;
+}
+
+#section3 .intro .wrap-form .contact-form #user-name {
+ width: 90%; height: 50px; 
+ border-radius: 10px;
+ padding-left: 20px ;
+ border: 1px solid #ddd; margin: 0 0 10px;
+}
+#section3 .intro .wrap-form .contact-form #user-email {
+  width: 90%; height: 50px; 
+  border-radius: 10px;
+  padding-left: 20px ;
+  border: 1px solid #ddd; margin: 0 0 10px;
 }
 
 
